objects/Account.object
<CustomObject>
    <fields>
        <fullName>Status__c</fullName>
        <description>Gives the Status of the Account</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Do Not Use</fullName>
                </value>
                <value>
                    <fullName>Not Qualified</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Out of Business</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Remove</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Pass-Thru</fullName>
                </value>
                <value>
                    <fullName>Oak-Fee</fullName>
                </value>
                <value>
                    <fullName>Out To Bid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stop_Services_10_Day_Notification__c</fullName>
        <description>Stop Services 10 day notification Acknowledgement</description>
        <label>Stop Services 10 Day Notification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier_Score_Date__c</fullName>
        <label>Supplier Score Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Supplier_Score__c</fullName>
        <formula>CASE(Landfill_Agreement__c , &quot;Yes&quot;, 25, 0)+ CASE(Integration_Type__c , &quot;API&quot;,20,&quot;Flat File&quot;, 20,&quot;Supplier Portal&quot;,15,&quot;Email&quot;,10,&quot;Fax&quot;,5,0)+ CASE(Payment_Methods__c, &quot;CC&quot;,10,&quot;ACH&quot;,6,&quot;Paper&quot;,2,0)+ CASE( Invoice_Method__c, &quot;EDI&quot;,15,&quot;Email&quot;,9,&quot;Mail&quot;,3,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Id_For_Flow_URL__c</fullName>
        <description>Task Id For Flow URL</description>
        <label>Task Id For Flow URL</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Classification__c</fullName>
        <label>Tax Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual/Sole Proprietor</fullName>
                </value>
                <value>
                    <fullName>Single-member LLC</fullName>
                </value>
                <value>
                    <fullName>S Corp</fullName>
                </value>
                <value>
                    <fullName>C Corp</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>Trust/Estate</fullName>
                </value>
                <value>
                    <fullName>LLC</fullName>
                </value>
                <value>
                    <fullName>LLP</fullName>
                </value>
                <value>
                    <fullName>LLS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trash_Multiplier_Heavy__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Trash Multiplier- Heavy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trash_Multiplier__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Trash Multiplier- Medium</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Types_of_Trucks__c</fullName>
        <label>Types of Trucks</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Front Load</fullName>
                </value>
                <value>
                    <fullName>Rear Load</fullName>
                </value>
                <value>
                    <fullName>Side Load</fullName>
                </value>
                <value>
                    <fullName>Rolloff Cable Lift</fullName>
                </value>
                <value>
                    <fullName>Rolloff Hook/Dead Lift</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valid_Certificate_of_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Link to Insurance Certificate 
-Checkbox to denote if within WM required limits</description>
        <label>Valid Certificate of Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_Business_Unit__c</fullName>
        <description>Denotes which WM BU the vendor operates under</description>
        <label>Vendor BU</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Group__c</fullName>
        <formula>&apos;3rd Party&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_ID__c</fullName>
        <description>Numeric ID assigned by the system to the vendor</description>
        <formula>AccountNumber</formula>
        <label>Vendor ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Invoice_Schedule_Perm_Comm__c</fullName>
        <label>Vendor Invoice Schedule Perm/Comm</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Advance Monthly</fullName>
                </value>
                <value>
                    <fullName>Arrears Monthly</fullName>
                </value>
                <value>
                    <fullName>Advance Bi-Monthly</fullName>
                </value>
                <value>
                    <fullName>Arrears Bi-Monthly</fullName>
                </value>
                <value>
                    <fullName>Advance Quarterly</fullName>
                </value>
                <value>
                    <fullName>Arrears Quarterly</fullName>
                </value>
                <value>
                    <fullName>Advance Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Advance Weekly</fullName>
                </value>
                <value>
                    <fullName>Arrears Weekly</fullName>
                </value>
                <value>
                    <fullName>Advance Bi-Weekly</fullName>
                </value>
                <value>
                    <fullName>Arrears Bi-Weekly</fullName>
                </value>
                <value>
                    <fullName>Advance Annually</fullName>
                </value>
                <value>
                    <fullName>Per Event</fullName>
                </value>
                <value>
                    <fullName>Arrears Annually</fullName>
                </value>
                <value>
                    <fullName>Arrears Semi-Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Invoice_Schedule_Perm_Roll_Off__c</fullName>
        <label>Vendor Invoice Schedule Perm Roll Off</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Advance Monthly</fullName>
                </value>
                <value>
                    <fullName>Arrears Monthly</fullName>
                </value>
                <value>
                    <fullName>Advance Bi-Monthly</fullName>
                </value>
                <value>
                    <fullName>Arrears Bi-Monthly</fullName>
                </value>
                <value>
                    <fullName>Advance Quarterly</fullName>
                </value>
                <value>
                    <fullName>Arrears Quarterly</fullName>
                </value>
                <value>
                    <fullName>Advance Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Advance Weekly</fullName>
                </value>
                <value>
                    <fullName>Arrears Weekly</fullName>
                </value>
                <value>
                    <fullName>Advance Bi-Weekly</fullName>
                </value>
                <value>
                    <fullName>Arrears Bi-Weekly</fullName>
                </value>
                <value>
                    <fullName>Advance Annually</fullName>
                </value>
                <value>
                    <fullName>Per Event</fullName>
                </value>
                <value>
                    <fullName>Arrears Annually</fullName>
                </value>
                <value>
                    <fullName>Arrears Semi-Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Invoice_Schedule_Temp__c</fullName>
        <label>Vendor Invoice Schedule Temp</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Advance Monthly</fullName>
                </value>
                <value>
                    <fullName>Arrears Monthly</fullName>
                </value>
                <value>
                    <fullName>Advance Bi-Monthly</fullName>
                </value>
                <value>
                    <fullName>Arrears Bi-Monthly</fullName>
                </value>
                <value>
                    <fullName>Advance Quarterly</fullName>
                </value>
                <value>
                    <fullName>Arrears Quarterly</fullName>
                </value>
                <value>
                    <fullName>Advance Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Advance Weekly</fullName>
                </value>
                <value>
                    <fullName>Arrears Weekly</fullName>
                </value>
                <value>
                    <fullName>Advance Bi-Weekly</fullName>
                </value>
                <value>
                    <fullName>Arrears Bi-Weekly</fullName>
                </value>
                <value>
                    <fullName>Advance Annually</fullName>
                </value>
                <value>
                    <fullName>Per Event</fullName>
                </value>
                <value>
                    <fullName>Arrears Annually</fullName>
                </value>
                <value>
                    <fullName>Arrears Semi-Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Relationship_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>align to Territory Map from Mike, each vendor is assigned to one VRM Team</description>
        <label>Vendor Relationship Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Service_Schedule__c</fullName>
        <label>Vendor Service Schedule</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Same Day Service</fullName>
                </value>
                <value>
                    <fullName>Next Day Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Status__c</fullName>
        <label>Vendor Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Vendor_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Strategy__c</fullName>
        <label>Vendor Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Grow</fullName>
                </value>
                <value>
                    <fullName>Internalize</fullName>
                </value>
                <value>
                    <fullName>Transfer to Preferred</fullName>
                </value>
                <value>
                    <fullName>Needs Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>W9_On_File__c</fullName>
        <description>W9 on file- Link to W9</description>
        <label>W9 On File</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WM_Bid_Registered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes whether or not the vendor is registered for WM Bid</description>
        <label>WM Bid Registered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WM_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this account is a WM vendor account</description>
        <inlineHelpText>Indicates that this account is a WM vendor account</inlineHelpText>
        <label>WM Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Walmart_GC_Location__c</fullName>
        <description>Formula field used to bypass restrictions from CPQ managed package.</description>
        <formula>Parent.Walmart_General_Contractor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Walmart GC Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Walmart_General_Contractor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To flag Walmart GC accounts, to use it for specific price rules</description>
        <label>Walmart General Contractor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Order_Email__c</fullName>
        <label>Work Order Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order_Fax__c</fullName>
        <label>Work Order Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Work_Order_Integration_System__c</fullName>
        <label>Work Order Integration System</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xauthor_Sales_Contact_Email__c</fullName>
        <label>Xauthor Sales Contact Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xauthor_Sales_Contact_Name__c</fullName>
        <label>Xauthor Sales Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xauthor_Sales_Contact_Phone__c</fullName>
        <label>Xauthor Sales Contact Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__DST_Setting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a hidden field and should not be added to the page layouts.</description>
        <inlineHelpText>This is a hidden field and should not be added to the page layouts.</inlineHelpText>
        <label>DST Setting</label>
        <referenceTo>tz__DST_Setting__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time_24_Short__c</fullName>
        <description>Shows the current local time (without date) for the Account in 24-hr format.</description>
        <formula>IF(ISBLANK(tz__UTC_Offset_F__c),
&quot;Unknown&quot;,
MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 )
&amp;&quot;:&quot;&amp;
MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 15, 2 )
&amp; &quot; &quot; &amp;
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone_F__c,&quot;&quot;)
)</formula>
        <inlineHelpText>Shows the current local time (without date) for the Account in 24-hr format.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time_24__c</fullName>
        <description>Shows the current local time for the Account in 24-hr format.</description>
        <formula>IF(ISBLANK(tz__UTC_Offset_F__c),
&quot;Unknown&quot;,
MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 6, 2 ) &amp; &quot;/&quot; &amp;
MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 9, 2 ) &amp; &quot;/&quot; &amp;
LEFT( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 4 ) &amp; &quot; &quot; &amp;
MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 )
&amp;&quot;:&quot;&amp;
MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 15, 2 )
&amp; &quot; &quot; &amp;
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone_F__c,&quot;&quot;)
)</formula>
        <inlineHelpText>Shows the current local time for the Account in 24-hr format.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time_Short__c</fullName>
        <description>Shows the current local time (without date) for the Account.</description>
        <formula>IF(ISBLANK(tz__UTC_Offset_F__c),
&quot;Unknown&quot;,
TEXT(
IF(
OR(
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 ) ) = 0,
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 ) ) = 12
),
12,
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 ) )
-
IF(
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 ) ) &lt; 12,
0,
12
)
)
)
&amp;&quot;:&quot;&amp;
MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 15, 2 )
&amp;&quot; &quot;&amp;
IF(
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 ) ) &lt; 12,
&quot;AM&quot;,
&quot;PM&quot;
)
&amp; &quot; &quot; &amp;
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone_F__c,&quot;&quot;)
)</formula>
        <inlineHelpText>Shows the current local time (without date) for the Account.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time__c</fullName>
        <description>Shows the current local time for the Account.</description>
        <formula>IF(ISBLANK(tz__UTC_Offset_F__c),
&quot;Unknown&quot;,
MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 6, 2 ) &amp; &quot;/&quot; &amp;
MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 9, 2 ) &amp; &quot;/&quot; &amp;
LEFT( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 4 ) &amp; &quot; &quot; &amp;
TEXT(
IF(
OR(
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 ) ) = 0,
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 ) ) = 12
),
12,
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 ) )
-
IF(
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 ) ) &lt; 12,
0,
12
)
)
)
&amp;&quot;:&quot;&amp;
MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 15, 2 )
&amp;&quot; &quot;&amp;
IF(
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 ) ) &lt; 12,
&quot;AM&quot;,
&quot;PM&quot;
)
&amp; &quot; &quot; &amp;
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone_F__c,&quot;&quot;)
)</formula>
        <inlineHelpText>Shows the current local time for the Account.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_DST_Full__c</fullName>
        <description>Full timezone name when the DST is on. This is a hidden field and should not be added to the page layouts.</description>
        <inlineHelpText>Full timezone name when the DST is on. This is a hidden field and should not be added to the page layouts.</inlineHelpText>
        <label>Timezone DST (Full)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_DST__c</fullName>
        <description>Timezone abbreviation when DST is on (PDT, EDT, etc.). This is a hidden field and should not be added to the page layouts.</description>
        <inlineHelpText>Timezone abbreviation when DST is on (PDT, EDT, etc.). This is a hidden field and should not be added to the page layouts.</inlineHelpText>
        <label>Timezone DST</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_F__c</fullName>
        <description>Current timezone abbreviation (PST, EST,etc..)</description>
        <formula>IF( tz__DST_Setting__r.tz__DST__c , tz__Timezone_DST__c, tz__Timezone__c )</formula>
        <inlineHelpText>Current timezone abbreviation (PST, EST,etc..)</inlineHelpText>
        <label>Timezone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_Full_F__c</fullName>
        <description>Current timezone full name.</description>
        <formula>IF( tz__DST_Setting__r.tz__DST__c , tz__Timezone_DST_Full__c, tz__Timezone_Full__c )</formula>
        <inlineHelpText>Current timezone full name.</inlineHelpText>
        <label>Timezone (Full)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_Full__c</fullName>
        <description>Full timezone name when the DST is off. This is a hidden field and should not be added to the page layouts.</description>
        <inlineHelpText>Full timezone name.</inlineHelpText>
        <label>Timezone Standard (Full)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_IANA__c</fullName>
        <description>Timezone as defined by Internet Assigned Numbers Authority (IANA).</description>
        <inlineHelpText>Timezone as defined by Internet Assigned Numbers Authority (IANA).</inlineHelpText>
        <label>Timezone (IANA)</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_SFDC__c</fullName>
        <description>Salesforce IANA timezone.</description>
        <inlineHelpText>Salesforce IANA timezone.</inlineHelpText>
        <label>Timezone SFDC</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone__c</fullName>
        <description>Timezone abbreviation when DST is off (PST, EST, etc.). This is a hidden field and should not be added to the page layouts.</description>
        <inlineHelpText>Current timezone abbreviation (PST, EST,etc..)</inlineHelpText>
        <label>Timezone Standard</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__UTC_Offset_DST__c</fullName>
        <description>UTC Offset when the DST is on. This is a hidden field and should not be added to the page layouts.</description>
        <inlineHelpText>UTC Offset when the DST is on. This is a hidden field and should not be added to the page layouts.</inlineHelpText>
        <label>UTC Offset DST</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tz__UTC_Offset_F__c</fullName>
        <description>Current UTC timezone offset.</description>
        <formula>IF( tz__DST_Setting__r.tz__DST__c , tz__UTC_Offset_DST__c , tz__UTF_Offset__c )</formula>
        <inlineHelpText>Current UTC timezone offset.</inlineHelpText>
        <label>UTC Offset</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tz__UTF_Offset__c</fullName>
        <description>UTC Offset when the DST is off. This is a hidden field and should not be added to the page layouts.</description>
        <inlineHelpText>Shows the current UTC timezone offset of the Account.</inlineHelpText>
        <label>UTC Offset Standard</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>ACCOUNT.ADDRESS2_STREET</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.ADDRESS2_ZIP</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Location_Code__c</columns>
        <columns>Primary_Segment__c</columns>
        <columns>Customer_Code__c</columns>
        <columns>tz__Timezone__c</columns>
        <columns>tz__Timezone_Full__c</columns>
        <columns>tz__Timezone_IANA__c</columns>
        <columns>tz__Timezone_SFDC__c</columns>
        <columns>IsPricingEligible__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_Clients</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Customer_Code__c</columns>
        <columns>ACCOUNT.ADDRESS2_STREET</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.ADDRESS2_ZIP</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Client</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active Clients</label>
    </listViews>
    <listViews>
        <fullName>All_Supplier</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Vendor_ID__c</columns>
        <columns>ACCOUNT.ADDRESS2_STREET</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.ADDRESS2_ZIP</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Vendor</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active Supplier</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>Client</fullName>
        <active>true</active>
        <description>Client Records</description>
        <label>Client</label>
    </recordTypes>
    <recordTypes>
        <fullName>Franchise</fullName>
        <active>true</active>
        <description>Franchise Records</description>
        <label>Franchise</label>
    </recordTypes>
    <recordTypes>
        <fullName>Location</fullName>
        <active>true</active>
        <description>Service Location Records</description>
        <label>Location</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor</fullName>
        <active>true</active>
        <description>Vendor Record Type (to replace the Supplier record type)</description>
        <label>Vendor</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>PortalName_Req_When_CustomerChk</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    Is_Portal_Customer__c = TRUE,
    ISBLANK(TEXT( Portal_Name__c ))
)</errorConditionFormula>
        <errorDisplayField>Portal_Name__c</errorDisplayField>
        <errorMessage>Portal Name field is required when the Is Portal Customer is checked</errorMessage>
    </validationRules>
</CustomObject>